--- a/templates/home.html
+++ b/templates/home.html
@@ -3,42 +3,23 @@
 <html>
   <head>
     <title>Kukusiki Careers</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <style>
-      h1 {
-        font-size: 40px;
-        font-family: Roboto;
-        font-weight: normal;
-        color: rgb(100, 100, 100);
-        text-align: center;
-      }
-      #title_image {
-        width: 100%;
+      #banner {
         height: 250px;
+        width: 100%;
         object-fit: cover;
-      }
-      h2 {
-        font-family: Roboto;
-        font-size: 32px;
-        color: rgb(50, 50, 50);
-        text-align: center;
-        font-weight: normal;
-      }
-      .bodytext {
-        font-family: Roboto;
-        color: rgb(80, 80, 80);
-      }
-      #container {
-        max-width: 720px;
-        margin: 0 auto;
       }
     </style>
   </head>
   <body>
-    <div id="container"> 
-      <h1>Kukusiki careers</h1>
-      <img id="title_image" src="http://restaurantcareerwebsite.alieksandrarie2.repl.co/static/restaurant.jpg">
-      <h2>About Kukusiki</h2>
-      <p class="bodytext">
+    <div class="container"> 
+      <h1 class="text-center mt-2 mb-4">{{company_name}} careers</h1>
+      <img class="img-fluid" id="banner" src="http://restaurantcareerwebsite.alieksandrarie2.repl.co/static/restaurant.jpg">
+      <h2 class="text-center">About {{company_name}}</h2>
+      <p class="lead">
         This Italian restaurant is located in the city centre. The restaurant serves traditional Italian cuisine in a calm, relaxing atmosphere.
   
   In front of the entrance there is a summer terrace where guests can enjoy a light business lunch or a cup of coffee.
@@ -47,11 +28,15 @@
   
   A wide range of salads and snacks is also served here. After a lunch or dinner, you will be offered to try one of the desserts. The meal can be accompanied by alcoholic and non-alcoholic cocktails.
       </p>
-      <h2>Open Positions</h2>
-      <p class="bodytext">TODO - Show the jobs here</p>
-      <div style="text-align:center">
-        <button>Contact us</button>
-          <p>Copyright 2023, Kukusiki</p>
+      <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+      <div>
+        {% for job in jobs %}
+          {% include 'jobitem.html' %}
+        {% endfor %}
+      </div>
+      <div class="text-center">
+        <button class="btn btn-primary btn-lg">Contact us</button>
+          <p class="mt-3">Copyright 2023, Kukusiki</p>
       </div>
     </div>
   </body>
