--- a/templates/home.html
+++ b/templates/home.html
@@ -15,6 +15,7 @@
     </style>
   </head>
   <body>
+    {% include 'nav.html' %}
     <div class="container"> 
       <h1 class="text-center mt-2 mb-4">{{company_name}} careers</h1>
       <img class="img-fluid" id="banner" src="http://restaurantcareerwebsite.alieksandrarie2.repl.co/static/restaurant.jpg">
@@ -35,10 +36,10 @@
         {% endfor %}
       </div>
       <div class="text-center">
-        <button class="btn btn-primary btn-lg">Contact us</button>
-          <p class="mt-3">Copyright 2023, Kukusiki</p>
+        <a class="btn btn-primary btn-lg" href="mailto:alexroze12@gmail.com?subject=Message about work">Contact us</a>
       </div>
     </div>
+    {% include 'footer.html' %}
   </body>
   
 </html>
