--- a/templates/jobitem.html
+++ b/templates/jobitem.html
@@ -7,6 +7,6 @@
     <div><b>Salary:</b> {{job['salary']}}</div>
   </div>
   <div class="col-3">
-    <a href="mailto:alexroze12@gmail.com?subject=Application for {{job['title']}}" type="button" class="btn btn-outline-primary">Apply</a>
+    <a href="/job/id" type="button" class="btn btn-outline-primary">Apply</a>
   </div>
 </div>
