--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -1,39 +1,108 @@
 <!DOCTYPE html>
+<html lang="en">
+  <title>Bootstrap Example</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+<head>
+  <title>{{job.title}} - Kukusiki Careers</title>
+</head>
+<body>
+<div class="container">
 
-<html>
-  <head>
-    <title>{{job.title}} - Kukusiki Careers</title>
-  </head>
-  <body>
-    <h3>Title</h3>
-    <p>{{job.title}}</p>
-    <div>
-      <table class="table table-bordered border-primary">
-        <thead>
-          <th>ID</th>
-          <th>Name</th>
-          <th>Gender</th>
-          <th>Age</th>
-          <th>Country</th>
-          <th>Actions</th>
-        </thead>
-        <tbody>
-          {% for cook in cooks %}
-          <tr>
-            <td>{{loop.index}}</td>
-            <td>{{cook.name}}</td>
-            <td>{{cook.gender}}</td>
-            <td>{{cook.age}}</td>
-            <td>{{cook.country}}</td>
-            <td>
-              <button type="button" class="btn btn-primary">Изменить</button>
-              <button type="button" class="btn btn-primary">Удалить</button>
-            </td>
-          </tr>
-          {% endfor %}
-        </tbody>
-      </table>
+  
+    <h1 class="text-center mt-2 mb-4">{{job.title}}</h1>
+    <div class="container">
+      <div class="row">
+        <div class="row">
+        <div class="col-md-4">
+          <div class="card card-body">
+            <form action="/job/{{job['id']}}/add" id="job_add" method="post">
+              <div class="form-group mb-2">
+                <input type="text" id="name" class="form-control" name="name" placeholder="name">
+              </div>
+              <div class="form-group mb-2">
+                <input type="text" id="gender" class="form-control" name="gender" placeholder="gender">
+              </div>
+              <div class="form-group mb-2">
+                <input type="text" id="age" class="form-control" name="age" placeholder="age">
+              </div>
+              <div class="form-group mb-2">
+                <input type="text" id="country" class="form-control" name="country" placeholder="country">
+              </div>
+              <button class="btn btn-primary btn-block">
+                Add 
+              </button>
+            </form>
+          </div>
+        </div>
+      <div class="col-md-8"> 
+        <table class="table table-bordered border-primary" width="90%">
+          <thead style="background-color: blue;color: aliceblue">
+            <th>Name</th>
+            <th>Gender</th>
+            <th>Age</th>
+            <th>Country</th>
+            <th>Actions</th>
+          </thead>
+          <tbody class="job_list">
+            {% for job in all_jobs %}
+            <tr>
+              <td>{{job.name}}</td>
+              <td>{{job.gender}}</td>
+              <td>{{job.age}}</td>
+              <td>{{job.country}}</td>
+              <td>
+                <a class="btn btn-primary btn-lg" data-toggle="modal" data-target="#modaledit{{job.id}}" href="//job/{{job['job_index']}}/{{job['id']}}/upd" >Edit</a>
+                <a class="btn btn-primary btn-lg" href="/job/{{job['job_index']}}/{{job['id']}}/delete">Delete</a>
+              </td>
+            </tr>
+            <div class="modal" id="modaledit{{job.id}}">
+    <div class="modal-dialog">
+      <div class="modal-content">
+      
+        <!-- Modal Header -->
+        <div class="modal-header">
+          <h4 class="modal-title">Edit window</h4>
+        </div>
+        <!-- Modal body -->
+        <div class="modal-body">
+          <form action="/job/{{job['job_index']}}/{{job['id']}}/upd" method="post">
+              <div class="form-group mb-2">
+                <input type="text" class="form-control" name="name_1" placeholder="name" value={{job.name}}> 
+              </div>
+              <div class="form-group mb-2">
+                <input type="text" class="form-control" name="gender_1" placeholder="gender" value={{job.gender}}>
+              </div>
+              <div class="form-group mb-2">
+                <input type="text" class="form-control" name="age_1" placeholder="age" value={{job.age}}>
+              </div>
+              <div class="form-group mb-2">
+                <input type="text" class="form-control" name="country_1" placeholder="country" value={{job.country}}>
+              </div>
+              <button class="btn btn-primary btn-block">
+                Update 
+              </button>
+            </form>
+        </div>
+        <!-- Modal footer -->
+        <div class="modal-footer">
+          <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+        </div>
+        
+      </div>
     </div>
+  </div>
+            {% endfor %}
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
   </body>
   
 </html>
