--- a/templates/home.html
+++ b/templates/home.html
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>Kukusiki Careers</title>
+    <title>Company vacancies</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
@@ -17,19 +17,14 @@
   <body>
     {% include 'nav.html' %}
     <div class="container"> 
-      <h1 class="text-center mt-2 mb-4">{{company_name}} careers</h1>
-      <img class="img-fluid" id="banner" src="http://restaurantcareerwebsite.alieksandrarie2.repl.co/static/restaurant.jpg">
+      <h1 class="text-center mt-2 mb-4">{{company_name}} vacancies</h1>
+      <img class="img-fluid" id="banner" src="http://restaurantcareerwebsite.alieksandrarie2.repl.co/static/space.jpg">
       <h2 class="text-center">About {{company_name}}</h2>
       <p class="lead">
-        This Italian restaurant is located in the city centre. The restaurant serves traditional Italian cuisine in a calm, relaxing atmosphere.
-  
-  In front of the entrance there is a summer terrace where guests can enjoy a light business lunch or a cup of coffee.
-  
-  The interior of the restaurant is elegantly decorated in warm colours. Quiet music is played in the background. Guests can order fresh pizza, delicious pasta as well as excellent meat and fish specialties.
-  
-  A wide range of salads and snacks is also served here. After a lunch or dinner, you will be offered to try one of the desserts. The meal can be accompanied by alcoholic and non-alcoholic cocktails.
+        Software engineering for high-tech analytical instrumentation. Company provides reliable and professional project-based outsourcing of software development for any business area requiring both modern graphical user interfaces and fundamental physical and mathematical kernels. We guarantee cost savings, on-time project completion, and high operational reliability for the products we develop. 
+        Company’s business style provides comprehensive services realized under flexible cooperation models. Our development center’s location in Eastern Europe delivers attractive tax structures, and our staff’s extensive experience in software development for analytical and life sciences instrumentation ensures high-value products.
       </p>
-      <h2 class="text-center mt-2 mb-4">Open Positions</h2>
+      <h2 class="text-center mt-2 mb-4">Vacancies</h2>
       <div>
         {% for job in jobs %}
           {% include 'jobitem.html' %}
