--- a/templates/jobpage.html
+++ b/templates/jobpage.html
@@ -9,7 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
 <head>
-  <title>{{job.title}} - Kukusiki Careers</title>
+  <title>{{job.title}} - Company vacancies</title>
 </head>
 <body>
 <div class="container">
